package _1_객체_설계._1_티켓_판매_애플리케이션_구현하기;

public class Ticket {
    private Long fee;

    public Long getFee() {
        return fee;
    }
}
